Update to latest dependency versions
The gson upgrade causes an unimplemented method in LargeStringBuilder to
be called. LargeStringBuilder was already on the chopping block since
implementing the changes to stream large string data throughout, so just
delete it.