@@ -54,6 +54,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <!-- this is the last version of guava that supports jdk 5 -->
       <version>11.0.2</version>
       <scope>test</scope>
     </dependency>
@@ -85,6 +86,9 @@
         -->
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.10</version>
+        <configuration>
+          <argLine>-XX:MaxPermSize=128m</argLine>
+        </configuration>
         <executions>
           <execution>
             <!-- override default test phase goal -->
